Demo: Run `jspm install webrtc-adapter`

--- a/demo/package.json
+++ b/demo/package.json
@@ -1,13 +1,17 @@
 {
   "name": "janus-rtpforward-plugin-browser-demo",
   "version": "1.0.0",
+  "dependencies": {
+    "webrtc-adapter": "^7.5.1"
+  },
   "description": "A working example of Janus rtpforward plugin",
   "devDependencies": {
+    "@jspm/core": "^1.1.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "systemjs": "^6.3.1",
-    "systemjs-transform-babel": "^0.1.2"
+    "systemjs-transform-babel": "~0.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
