--- a/demo/package.json
+++ b/demo/package.json
@@ -2,6 +2,7 @@
   "name": "janus-rtpforward-plugin-browser-demo",
   "version": "1.0.0",
   "dependencies": {
+    "minnie-janus": "~0.9.3",
     "webrtc-adapter": "^7.5.1"
   },
   "description": "A working example of Janus rtpforward plugin",
@@ -25,5 +26,6 @@
   "keywords": [
     "janus-gateway",
     "webrtc"
-  ]
+  ],
+  "type": "module"
 }
